--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@three0dev/js-sdk": "^0.2.0-alpha",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^3.0.4"
   },
